force-app/main/default/objects/DU_Listings__c/DU_Listings__c.object-meta.xml
<CustomObject>
    <description>CDM: A listing describes an entry of the &quot;available products list&quot; of a web store. It combines the article description with the available amount for a given store front.</description>
    <label>Listing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>