force-app/main/default/objects/DU_Listings__c/fields/DU_Asset__c.field-meta.xml
<CustomField>
    <fullName>DU_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM: This field references the asset that relates to the listing</description>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Listings (Asset)</relationshipLabel>
    <relationshipName>DU_ListingsAsset</relationshipName>
    <type>Lookup</type>
</CustomField>