force-app/main/default/objects/DU_Listings__c/fields/DU_BodyworkType__c.field-meta.xml
<CustomField>
    <fullName>DU_BodyworkType__c</fullName>
    <description>CDM: Stores the body work type of the asset.</description>
    <label>Bodywork Type​​</label>
    <length>255</length>
    <type>Text</type>
</CustomField>