force-app/main/default/objects/DU_Listings__c/fields/DU_CO2EmissionWLTP__c.field-meta.xml
<CustomField>
    <fullName>DU_CO2EmissionWLTP__c</fullName>
    <description>CDM: Stores the carbon dioxide emission in WLTP.</description>
    <label>CO2 Emission WLTP (g/KM)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>