force-app/main/default/objects/DU_Listings__c/fields/DU_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>DU_CountryCode__c</fullName>
    <description>CDM: Country Code of the market the listing is related to. Based on a global value set.
Availability 1.6.0.14</description>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_CountryCode</valueSetName>
    </valueSet>
</CustomField>