force-app/main/default/objects/DU_Listings__c/fields/DU_Description__c.field-meta.xml
<CustomField>
    <fullName>DU_Description__c</fullName>
    <description>CDM: Field to capture asset/Listing description</description>
    <label>Description​​</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>