force-app/main/default/objects/DU_Listings__c/fields/DU_Drive__c.field-meta.xml
<CustomField>
    <fullName>DU_Drive__c</fullName>
    <description>CDM: Upon creation of a Listing, this field will be filled with the corresponding value on the Asset (in case of Asset Listing), or will hold the value inserted by the end user (in case of BTO listing). This field is used as filters on the ACS website.</description>
    <inlineHelpText>This field contains either the Drive of the Asset (in case of Asset Listing) or the Drive which will be part of the BTO (in case of BTO listing)</inlineHelpText>
    <label>Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DU_Drive</valueSetName>
    </valueSet>
</CustomField>