force-app/main/default/objects/DU_Listings__c/fields/DU_EmissionStandards__c.field-meta.xml
<CustomField>
    <fullName>DU_EmissionStandards__c</fullName>
    <description>CDM: Field to capture the emission standards of a vehicle</description>
    <label>Emission Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EU1</fullName>
            </value>
            <value>
                <fullName>EU2</fullName>
            </value>
            <value>
                <fullName>EU3</fullName>
            </value>
            <value>
                <fullName>EU4</fullName>
            </value>
            <value>
                <fullName>EU5</fullName>
            </value>
            <value>
                <fullName>EU6</fullName>
            </value>
            <value>
                <fullName>EU7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>