force-app/main/default/objects/DU_Listings__c/fields/DU_EndDate__c.field-meta.xml
<CustomField>
    <fullName>DU_EndDate__c</fullName>
    <description>CDM: Specifies the End Date of the Listing</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>