force-app/main/default/objects/DU_Listings__c/fields/DU_EngineName__c.field-meta.xml
<CustomField>
    <fullName>DU_EngineName__c</fullName>
    <description>CDM: Name of the Engine (e.g. 2.0 TDI)</description>
    <inlineHelpText>Name of the Engine (e.g. 2.0 TDI)</inlineHelpText>
    <label>Engine Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>