force-app/main/default/objects/DU_Listings__c/fields/DU_EquipmentSummary__c.field-meta.xml
<CustomField>
    <fullName>DU_EquipmentSummary__c</fullName>
    <description>CDM: Details of the Equipment Summary are stored in this field.</description>
    <inlineHelpText>Equipment Summary</inlineHelpText>
    <label>Equipment Summary</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>