force-app/main/default/objects/DU_Listings__c/fields/DU_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>DU_ExternalID__c</fullName>
    <description>CDM: To be able to easily link Listings to the Product options for the end user, and for any update.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>