force-app/main/default/objects/DU_Listings__c/fields/DU_FuelConsCombNEFZ__c.field-meta.xml
<CustomField>
    <fullName>DU_FuelConsCombNEFZ__c</fullName>
    <description>CDM: Stores the fuel consumption in NEFZ.</description>
    <label>Fuel Consumption NEFZ (l/100 KM)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>