force-app/main/default/objects/DU_Listings__c/fields/DU_MBVCode__c.field-meta.xml
<CustomField>
    <fullName>DU_MBVCode__c</fullName>
    <description>CDM: Contains the model code of the vehicle stored within the asset record</description>
    <label>MBV Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>