force-app/main/default/objects/DU_Listings__c/fields/DU_ModelSpecification__c.field-meta.xml
<CustomField>
    <fullName>DU_ModelSpecification__c</fullName>
    <description>CDM: Stores the specification of the model.</description>
    <label>Model Specification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>