force-app/main/default/objects/DU_Listings__c/fields/DU_NOXEmissionNEFZ__c.field-meta.xml
<CustomField>
    <fullName>DU_NOXEmissionNEFZ__c</fullName>
    <description>CDM: Stores the NOX Emission in NEFZ.</description>
    <label>NOx Emission NEFZ (g/KM)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>