force-app/main/default/objects/DU_Listings__c/fields/DU_NOXEmissionWLTP__c.field-meta.xml
<CustomField>
    <fullName>DU_NOXEmissionWLTP__c</fullName>
    <description>CDM: Stores the NOX Emission in WLTP.</description>
    <label>NOx Emission WLTP (g/KM)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>