force-app/main/default/objects/DU_Listings__c/fields/DU_StartDate__c.field-meta.xml
<CustomField>
    <fullName>DU_StartDate__c</fullName>
    <description>CDM: Specifies the Start Date of the Listing</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>