force-app/main/default/objects/DU_Listings__c/fields/DU_Status__c.field-meta.xml
<CustomField>
    <fullName>DU_Status__c</fullName>
    <defaultValue>&quot;Unpublished&quot;</defaultValue>
    <description>CDM: Show the status for the listing</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Unpublished</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>