force-app/main/default/objects/DU_Listings__c/fields/DU_TopColorOriginal__c.field-meta.xml
<CustomField>
    <fullName>DU_TopColorOriginal__c</fullName>
    <description>CDM: Stores the original top color.</description>
    <label>Top color (original)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>