force-app/main/default/objects/DU_Listings__c/fields/DU_TransmissionType__c.field-meta.xml
<CustomField>
    <fullName>DU_TransmissionType__c</fullName>
    <description>CDM: Stores the type of transmission.</description>
    <label>Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>