force-app/main/default/objects/DU_Listings__c/fields/DU_Trimline__c.field-meta.xml
<CustomField>
    <fullName>DU_Trimline__c</fullName>
    <description>CDM: Trimline of the Vehicle (e.g. S Line or Black Edition)</description>
    <inlineHelpText>Trimline of the Vehicle (e.g. S Line or Black Edition)</inlineHelpText>
    <label>Trimline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>