force-app/main/default/objects/DU_Listings__c/fields/DU_VehiclePowerInKW__c.field-meta.xml
<CustomField>
    <fullName>DU_VehiclePowerInKW__c</fullName>
    <description>CDM: Stores the vehicle power in KW.</description>
    <label>Vehicle Power in kW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>