force-app/main/default/objects/DU_Listings__c/fields/DU_VIN__c.field-meta.xml
<CustomField>
    <fullName>DU_VIN__c</fullName>
    <description>CDM: This field references the VIN to the related asset</description>
    <formula>DU_Asset__r.DU_VIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIN</label>
    <type>Text</type>
</CustomField>