force-app/main/default/objects/DU_Listings__c/fields/DU_WebOfferCampaignCode__c.field-meta.xml
<CustomField>
    <fullName>DU_WebOfferCampaignCode__c</fullName>
    <description>CDM: Campaign Code</description>
    <inlineHelpText>Campaign Code</inlineHelpText>
    <label>Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>