force-app/main/default/objects/DU_Listings__c/fields/DU_Website__c.field-meta.xml
<CustomField>
    <fullName>DU_Website__c</fullName>
    <description>CDM: In order to mark a listing available for a website.</description>
    <label>Website</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VWFS brand website</fullName>
            </value>
            <value>
                <fullName>Dealer website</fullName>
            </value>
            <value>
                <fullName>VWFS market website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>