force-app/main/default/objects/DU_Listings__c/recordTypes/DU_AssetListings.recordType-meta.xml
<RecordType>
    <fullName>DU_AssetListings</fullName>
    <active>true</active>
    <description>Listings associated with an existing Asset</description>
    <label>Asset Listings</label>
</RecordType>