force-app/main/default/objects/DU_Listings__c/recordTypes/DU_BTOListings.recordType-meta.xml
<RecordType>
    <fullName>DU_BTOListings</fullName>
    <active>true</active>
    <description>Listings for a specification</description>
    <label>BTO Listings</label>
</RecordType>